<resources>
    <string name="app_name">MathOrcs</string>

    <string name="play_game">Play Game</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="main_content">MATH\nORCS</string>

    <string name="get_ready">Get\nReady!</string>
    <string name="go_back">Go Back</string>
    <string name="got_it">Got It</string>

    <string name="more_time_tip_text">TIP: You found a "More Time" token! Use this (upper left button) to give yourself a few extra seconds if you need a bit more time to find the answer.</string>
    <string name="approx_tip_text">TIP: You found an "Approx" token! Use this (upper right button), and if you are off by less than either 20%, or 2 whole numbers, it will still count as correct.</string>
    <string name="reward_tip_text">TIP: You found a reward! If you solve a problem fast enough, you have a chance of receiving one or multiple rewards! These may be extra lives or bonus tokens you can use.</string>

    <!--        Used by Preferences:            -->

    <string name="shared_prefs_key">shared_prefs_key</string>

    <string name="difficulty_title">Timer Difficulty</string>
    <string name="difficulty_key">difficulty_key</string>
    <string name="difficulty_summary">Determines amount of time per question</string>

    <string name="no_timer_difficulty_preference">No Timer</string>
    <string name="easy_difficulty_preference">Easy</string>
    <string name="medium_difficulty_preference">Medium</string>
    <string name="hard_difficulty_preference">Hard</string>
    <string name="no_timer_difficulty_preference_value">0</string>
    <string name="easy_difficulty_preference_value">1</string>
    <string name="medium_difficulty_preference_value">2</string>
    <string name="hard_difficulty_preference_value">3</string>


    <string name="mega_mode_pref_title">Mega Mode</string>
    <string name="mega_mode_pref_key" translatable="false">mega_mode_pref_key</string>
    <string name="mega_mode_pref_summary">Increases number values and timer acceleration</string>
    <string name="mega_mode_levels_key">level_selected</string>
    <string name="mega_mode_levels_title">Mega Mode Level</string>
    <string name="mega_mode_levels_summary">Select your level of mega difficulty</string>

    <string name="mega_mode_level_1">Level 1</string>
    <string name="mega_mode_level_2">Level 2</string>
    <string name="mega_mode_level_3">Level 3</string>
    <string name="mega_mode_level_4">Level 4</string>
    <string name="mega_mode_level_5">Level 5</string>
    <string name="mega_mode_level_6">Level 6</string>
    <string name="mega_mode_level_7">Level 7</string>
    <string name="mega_mode_level_8">Level 8</string>
    <string name="mega_mode_level_9">Level 9</string>
    <string name="mega_mode_level_10">Level 10</string>

    <string name="mega_mode_level_1_value">1</string>
    <string name="mega_mode_level_2_value">2</string>
    <string name="mega_mode_level_3_value">3</string>
    <string name="mega_mode_level_4_value">4</string>
    <string name="mega_mode_level_5_value">5</string>
    <string name="mega_mode_level_6_value">6</string>
    <string name="mega_mode_level_7_value">7</string>
    <string name="mega_mode_level_8_value">8</string>
    <string name="mega_mode_level_9_value">9</string>
    <string name="mega_mode_level_10_value">10</string>

    <string name="tips_pref_title">Game Tips</string>
    <string name="tips_pref_key">tips_pref_key</string>

    <string name="timer_bar_pref_title">Timer Bar</string>
    <string name="timer_bar_pref_key">timer_bar_pref_key</string>

    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="all_time_kills_key">all_time_kills_key</string>
    <string name="all_time_kills_title">Total Correct:</string>

    <string name="all_time_games_finised_key">all_time_games_finished_key</string>
    <string name="all_time_games_finished_title">Games Finished:</string>

    <string name="all_time_games_won_key">all_time_games_won_key</string>
    <string name="all_time_games_won_title">Games Won:</string>

    <string name="all_time_time_key">all_time_time_key</string>
    <string name="all_time_time_title">Total Time:</string>

    <string name="highest_level_reached_easy_key">highest_level_reached_easy_key</string>
    <string name="highest_level_reached_medium_key">highest_level_reached_medium_key</string>
    <string name="highest_level_reached_hard_key">highest_level_reached_hard_key</string>

    <string name="highest_level_reached_title">Highest Level Reached:\n</string>

    <string name="awards">Awards</string>

    <!--

    <string name="top_ten_hs_preference">Top Ten</string>
    <string name="all_hs_preference">All</string>
    <string name="top_ten_hs_preference_value">top_ten_hs_pref_value</string>
    <string name="all_hs_preference_value">all_hs_pref_value</string>

    <string name="hs_from_past_day_preference">24h</string>
    <string name="hs_from_past_week_preference">Week</string>
    <string name="hs_from_past_month_preference">Month</string>
    <string name="hs_from_past_year_preference">Year</string>
    <string name="hs_from_all_time_preference">All Time</string>

    <string name="hs_from_past_day_preference_value">past_day_pref_value</string>
    <string name="hs_from_past_week_preference_value">past_week_pref_value</string>
    <string name="hs_from_past_month_preference_value">past_month_pref_value</string>
    <string name="hs_from_past_year_preference_value">past_year_pref_value</string>
    <string name="hs_from_all_time_preference_value">all_time_pref_value</string>

    -->

</resources>
