<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.example.android.mathorcs.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/main_content"
            android:textColor="@color/problem_color"
            android:textSize="70sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttons_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/play_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/play_game"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/high_scores_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_scores"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/achievements_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achievements"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/settings_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:onClick="handleButton"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
