<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryBg"
    tools:context="com.example.android.mathorcs.PlayGame">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-220dp"
        android:gravity="center"
        android:keepScreenOn="true" />

    <TextView
        android:layout_width="200dp"
        android:id="@+id/main_display_board"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/get_ready"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="-100dp"/>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <Button
        android:id="@+id/exit_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/go_back"
        android:onClick="handleButton"/>
    <LinearLayout
        android:id="@+id/scores_pane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/scorecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize = "18sp"
            android:layout_margin="12dp"
            android:text="score: 0"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <TextView
            android:id="@+id/lives_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize = "18sp"
            android:layout_margin="12dp"
            android:text="lives: 3"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <TextView
            android:id="@+id/level_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin = "12dp"
            android:text="level: 1"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <Button
            android:id="@+id/undo_button"
            android:layout_gravity="center"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:onClick="handleButton"
            android:visibility="invisible"
            android:text="undo"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/end_game_pane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:visibility="invisible">
        <TextView
            android:id="@+id/final_score_textview_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:alpha = "0.4"
            android:fontFamily="sans-serif-smallcaps"
            />
        <TextView
            android:id="@+id/final_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"/>
        <TextView
            android:id="@+id/correct_problems_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps"/>
        <TextView
            android:id="@+id/total_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps"/>
        <Button
            android:id="@+id/final_go_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_back"
            android:onClick="handleButton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timer_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/problem_color"
            android:textStyle="bold"
            android:text="0.0"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <FrameLayout
                android:id="@+id/timer_bar"
                android:layout_width="300dp"
                android:layout_height="8dp"
                android:background="@color/problem_color"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bonus_button_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/more_time_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:text="mo' time"
                android:onClick="handleButton"/>

            <TextView
                android:id="@+id/solution_edit_text"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textSize="22dp"
                android:layout_margin="10dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAlignment="center"
                />
            <Button
            android:id="@+id/approx_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:text="app- rox"
            android:onClick="handleButton"/>
        </LinearLayout>
        <GridLayout
            android:id="@+id/solve_button_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:layout_gravity="center">
            <Button
                android:id="@+id/solution_button_zero"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="0"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_one"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="1"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_two"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="2"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_three"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="3"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_four"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="4"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_five"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="5"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_six"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="6"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_seven"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="7"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_eight"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="8"
                android:onClick="handleButton"/>
            <Button
                android:id="@+id/solution_button_nine"
                android:layout_height="54dp"
                android:layout_width="54dp"
                android:text="9"
                android:onClick="handleButton"/>


        </GridLayout>

        <TextView
            android:id="@+id/previous_question_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text=""
            android:textSize="18dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/more_time_tip_layout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/more_time_tip_text"
            android:textSize="24sp"
            android:padding="20dp"
            android:fontFamily="sans-serif"/>
        <Button
            android:id="@+id/more_time_tip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/got_it"
            android:onClick="handleButton"
            android:textSize="30sp"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/approx_tip_layout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/approx_tip_text"
            android:textSize="24sp"
            android:padding="20dp"
            android:fontFamily="sans-serif"/>
        <Button
            android:id="@+id/approx_tip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/got_it"
            android:textSize="30sp"
            android:onClick="handleButton"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/reward_tip_layout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/colorAccent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reward_tip_text"
        android:textSize="24sp"
        android:padding="20dp"
        android:fontFamily="sans-serif"/>

    <Button
        android:id="@+id/reward_tip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/got_it"
        android:textSize="30sp"
        android:onClick="handleButton"/>
</LinearLayout>


</FrameLayout>
